--- a/index.html
+++ b/index.html
@@ -12,34 +12,46 @@
     <div class="container mt-5 mb-4">
         <div class="row justify-content-center g-3">
             <!-- Wallpaper controls group -->
-            <div class="col-md-4">
-                <div class="input-group">
-                    <span class="input-group-text">Wallpaper Color</span>
-                    <input type="color" class="form-control form-control-color w-50" id="wallpaper-color" value="#3EB6A8">
-                    <button class="btn btn-outline-primary" id="toggle-wallpaper">Toggle Wallpaper</button>
+            <div class="col-12 col-md-4">
+                <div class="input-group flex-nowrap">
+                    <span class="input-group-text">Wallpaper</span>
+                    <input type="color" class="form-control form-control-color" id="wallpaper-color" value="#3EB6A8">
+                    <button class="btn btn-outline-primary" id="toggle-wallpaper">
+                        <i class="bi bi-image"></i>
+                    </button>
                 </div>
             </div>
 
             <!-- Logo controls group -->
-            <div class="col-md-6">
-                <div class="input-group">
-                    <span class="input-group-text">Logo Color</span>
+            <div class="col-12 col-md-6">
+                <div class="input-group flex-wrap">
+                    <span class="input-group-text">Logo</span>
                     <input type="color" class="form-control form-control-color" id="color" value="#B22222">
-                    <button id="Toggle" class="btn btn-outline-success">Toggle Dots</button>
-                    <button id="toggle-text" class="btn btn-outline-danger">Toggle Text</button>
-                    <button id="Download" class="btn btn-outline-primary"><i class="bi bi-download"></i></button>
+                    <button id="Toggle" class="btn btn-outline-success">
+                        <i class="bi bi-circle-fill"></i>
+                    </button>
+                    <button id="toggle-text" class="btn btn-outline-danger">
+                        <i class="bi bi-type"></i>
+                    </button>
+                    <button id="Download" class="btn btn-outline-primary">
+                        <i class="bi bi-download"></i>
+                    </button>
                 </div>
+            </div>
+
+            <div class="col-12 col-md-6 ml-md-3 mr-md-3">
+                <div class="input-group flex-wrap">
+                    <span class="input-group-text">Character</span>
+                    <input type="text" class="form-control" id="ascii" value="U" maxlength="1">
             </div>
         </div>
     </div>
 
-<style>
+    <style>
         svg {
-            /* align-items: center; */
             display: flex;
             justify-content: center;
             margin: 0 auto;
-            /* margin: 0 20%; */
             width: 50%;
             height: auto;
         }
@@ -163,13 +175,12 @@
     </g>
     <g id="Calque_2">
         <circle class="st2 dot" cx="343.43" cy="473.97" r="11"/>
+        <circle class="st2 dot" cx="377.3" cy="403.43" r="8"/>
         <circle class="st2 dot" cx="414.65" cy="449.88" r="11"/>
+        <circle class="st2 dot" cx="444.2" cy="340.4" r="8"/>
         <circle class="st2 dot" cx="455.53" cy="488.21" r="11"/>
         <circle class="st2 dot" cx="544.21" cy="493.1" r="11"/>
-        <circle class="st2 dot" cx="377.3" cy="403.43" r="8"/>
-        <circle class="st2 dot" cx="444.2" cy="340.4" r="8"/>
         <circle class="st2 dot" cx="545.97" cy="373.74" r="8"/>
-        <circle class="st2 dot" cx="343.43" cy="473.97" r="11"/>
         <circle class="st2 dot" cx="584.07" cy="432.21" r="8"/>
     </g>
     </svg>
