Add color flip functionality between the logo and the wallpaper

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div class="container mt-5 mb-4">
         <div class="row justify-content-center g-3">
             <!-- Wallpaper controls group -->
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-6">
                 <div class="input-group flex-nowrap">
                     <span class="input-group-text">Wallpaper</span>
                     <input type="color" class="form-control form-control-color" id="wallpaper-color" value="#3EB6A8">
                     <button class="btn btn-outline-primary" id="toggle-wallpaper">
                         <i class="bi bi-image"></i>
                     </button>
+                    <button id="flip" class="btn btn-outline-success"><i class="bi bi-arrow-left-right"></i></button>
                 </div>
             </div>
 
@@ -39,7 +40,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-6 ml-md-3 mr-md-3">
+            <div class="col-12 col-md-6 ml-md-3 mr-md-3 mb-4">
                 <div class="input-group flex-wrap">
                     <span class="input-group-text">Character</span>
                     <input type="text" class="form-control" id="ascii" value="U" maxlength="1">
