--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="Logo.png" sizes="128x128">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5 mb-4">
@@ -49,6 +52,10 @@
     </div>
 
     <style>
+        * {
+            font-family: 'Outfit', sans-serif;
+        }
+
         svg {
             display: flex;
             justify-content: center;
@@ -138,8 +145,18 @@
 </g>
 
     </svg>
+
+<footer>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <p class="text-center">Made with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.linkedin.com/in/abderrahmane-lemmouchi/" class="text-decoration-none">Abderrahmane LEMMOUCHI</a> 🍄</p>
+</footer>
+
+
 <script src="script.js">
 </script>
+
 
 </body>
 </html>
