Minor change in the footer

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12">
-                <p class="text-center">Made with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.linkedin.com/in/abderrahmane-lemmouchi/" class="text-decoration-none">Abderrahmane LEMMOUCHI</a> 🍄</p>
+                <p class="text-center">Made with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.linkedin.com/in/abderrahmane-lemmouchi/" class="text-decoration-none">Abderrahmane LEMMOUCHI</a> from the 🍄 <a href="https://linktr.ee/Devshroom">Devshroom club</a> 🍄</p>
 </footer>
 
 
