--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,13 @@
 <body>
     <div class="container mt-5 mb-4">
         <div class="row justify-content-center g-3">
+            <!-- Add theme toggle button -->
+            <div class="col-12 text-end mb-3">
+                <button class="btn btn-outline-primary" id="theme-toggle">
+                    <i class="bi bi-moon-fill"></i>
+                </button>
+            </div>
+            
             <!-- Wallpaper controls group -->
             <div class="col-12 col-md-6">
                 <div class="input-group flex-nowrap">
@@ -147,7 +154,7 @@
     </svg>
 
 <footer>
-    <div class="container">
+    <div class="container mt-5 mb-4">
         <div class="row justify-content-center">
             <div class="col-12">
                 <p class="text-center">Made with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.linkedin.com/in/abderrahmane-lemmouchi/" class="text-decoration-none">Abderrahmane LEMMOUCHI</a> from the 🍄 <a href="https://linktr.ee/Devshroom">Devshroom club</a> 🍄</p>
