Add description to the website

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+    <meta name="description" content="The ultimate logo designer tool to create any variation of the Devshroom logo 🍄, whether you want to change the color or the wallpaper, and ofc there is a twist 😉.">
 </head>
 <body>
     <div class="container mt-5 mb-4">
